# cc-switch-cli-web

./: .gitignore  DELIVERY.md  README.md  start.sh
server/: main.py  pyproject.toml
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: EnvTools.tsx  Header.tsx  ProviderList.tsx  SessionList.tsx  StatusBar.tsx
web/src/utils/: clipboard.ts
